added the text in the index html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,42 @@
-<!-- 
-    Type "! + tab" in order to get started with the base HTML boilerplate using emmet !
-    Don't forget to link your css file :)
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    
+    
+    <title>Document</title>
+</head>
+<body>
+    <section>
+        <a href="">Johanne</a>
+        <a href="">Houssame</a>
+    </section>
+    <section>
+        <h1>"Catch Phrase"</h1>
+    </section>
+
+    <section>
+        <img src="" alt="">
+        <img src="" alt="">
+    </section>
+    <hr>
+    <section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Reiciendis neque quos ratione tempora enim magni eveniet illum, 
+        itaque suscipit necessitatibus voluptates sunt, molestiae expedita. 
+        Tempora aliquid dignissimos aut possimus consequuntur!
+
+    </p>
+    </section>
+    <hr>
+    <section>
+        <h1>We came here to :</h1>
+        <ul>
+            <li>A</li>
+            <li>B</li>
+            <li>C</li>
+            <li>D</li>
+        </ul>
+    </section>
+</body>
+</html>
