added the pictures

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </section>
 
     <section>
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="img/image-johanna.jpg" alt="">
+        <img src="img/picture-houssame.jpeg" alt="">
     </section>
     <hr>
     <section>
