--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link ref="stylesheet" href="./css/style.css"
     
     
     <title>Document</title>
@@ -12,7 +14,7 @@
         <a href="">Houssame</a>
     </section>
     <section>
-        <h1>"Catch Phrase"</h1>
+        <h1>"Let's learn some stuffs !"</h1>
     </section>
 
     <section>
@@ -30,7 +32,7 @@
     </section>
     <hr>
     <section>
-        <h1>We came here to :</h1>
+        <h2>We came here to :</h2>
         <ul>
             <li>A</li>
             <li>B</li>
