change Johanna's spelling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="links-section">
-        <a href="">Johanne</a>
+        <a href="./johanna/index.html">Johanna</a>
         <a href="houssame/houssame.html">Houssame</a>
     </section>
     <section>
