--- a/johanna/index.html
+++ b/johanna/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Inconsolata">
+          <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Montserrat">
 
     <title>Johanna</title>
 </head>
